<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ur.life</string>
    <string name="Welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Join</string>
    <string name="Submit">Create an account</string>
    <string name="e_mail">Email Address</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="agreement">I agree to the ur.life <a href = "#">Terms of Services</a> and <a href = "#">Privacy Policy</a>.</string>
    <string name="First_Name">First Name</string>
    <string name="height">Height</string>
    <string name="weight">Height</string>
    <string name="gender">Gender</string>
    <string name="Last_Name">Last Name</string>
    <string name="start">Save</string>


</resources>
